tests/solidity-semantic-tests/out/errors/named_parameters_shadowing_types/C.approval.teal
#pragma version 12
#pragma typetrack false

// /home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/tests/solidity-semantic-tests/tests/errors/named_parameters_shadowing_types.sol.C.approval_program() -> uint64:
main:
    intcblock 1 0
    pushint 4096
    bzero
    dup
    store 5
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn ApplicationID
    bnz main_after_if_else@2
    intc_0 // 1
    return

main_after_if_else@2:
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0x2d4970c7 0xf2b65f27 // method "f()void", method "g()void"
    txna ApplicationArgs 0
    match f g
    err


// /home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/tests/solidity-semantic-tests/tests/errors/named_parameters_shadowing_types.sol.C.f[routing]() -> void:
f:
    txn GroupIndex
    bz f_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

f_ternary_merge@4:
    !
    assert // not payable
    err // E1

f_ternary_false@3:
    intc_1 // 0
    b f_ternary_merge@4


// /home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/tests/solidity-semantic-tests/tests/errors/named_parameters_shadowing_types.sol.C.g[routing]() -> void:
g:
    txn GroupIndex
    bz g_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

g_ternary_merge@4:
    !
    assert // not payable
    err // E2

g_ternary_false@3:
    intc_1 // 0
    b g_ternary_merge@4
